better pipfile and lock

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 numpy = "*"
 torch = ">= 1.11.0"
-jax = "*"
+jax = {extras = ["cuda"], version = "*"}
 librosa = "*"
 scipy = "*"
 matplotlib = "*"
