fix errors in tensor creation logic

--- a/Pipfile
+++ b/Pipfile
@@ -3,11 +3,16 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://download.pytorch.org/whl/cpu"
+verify_ssl = true
+name = "pytorch-cpu"
+
 [packages]
 numpy = "*"
-torch = ">= 1.11.0"
-torchvision = "*"
-torchaudio = "*"
+torch = { version = ">= 1.11.0", index = "pytorch-cpu" }
+torchvision = { version = "*", index = "pytorch-cpu" }
+torchaudio = { version = "*", index = "pytorch-cpu" }
 librosa = "*"
 scipy = "*"
 matplotlib = "*"
